src/css/TrainerCatchUp.css
/* --------------------------- CatchUp Styles ----------------------------------*/

.catchUp {
    height: 100%;
    /* overflow: hidden; */
}

.catchUp-container {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(4, 1fr);
    /* grid-template-rows: 1fr 0.2fr 0.8fr 0.8fr 0.2fr 1fr; */
    width: 95%;
    margin: auto;
    overflow: hidden;
    /* height: 50%; */
}

/* .edit-icon {

} */

.up-icon {
    color: green;
}

.down-icon {
    color: red;
}

/* --------------------------- Clients Styles ----------------------------------*/

.clients-dropdown {
    grid-column: span 2;
}

/* --------------------------- FitBitIcons Styles ----------------------------------*/

.fitbit-icons {
    height: 100%;
    grid-column: span 2;
    overflow: hidden;
    display: flex;
    justify-content: space-evenly;
    text-align: center;
}

.fitbit-icon {
    height: 4em;
    width: 100%;
}

.calBurnt {
    color: rgb(196, 97, 3);
}

.waterIntake {
    color: rgb(2, 148, 186);
}

.floorsClimbed {
    color: rgb(141, 113, 1);
}

.activeMins {
    color: rgb(174, 234, 95);
}

.distTravelled {
    color: rgb(201, 99, 248);
}

.fitbit-content {
    display: flex;
    /* gap: 1rem; */
}

.fitbit-data {
    display: flex;
    flex-direction: column;
}

/* --------------------------- Steps Styles ----------------------------------*/

.steps {
    grid-column: span 2;
    grid-row: span 2;
    height: 100%;
    overflow: hidden;
}

.steps-content {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
    width: 80%;
    height: 80%;
    margin: auto;
}

.steps-chart-container {
    /* height: 100%; */
    width: 100%;
}

.steps-bar-chart {
    max-width: 100%;
    /* height: 100%; */
    width: 100%;
    /* object-fit: cover;   crops images instead of stretch or shrinking */
}

.steps-text {
    display: flex;
    justify-content: space-evenly;
}

/* .steps-label {

}

.steps-data {

} */

/* --------------------------- Intake Styles ----------------------------------*/

.intake {
    /* grid-row: span 3;
    grid-column: span 2; */
    height: 100%;
    overflow: hidden;
}

.intake-heading {
    text-align: center;
    font-size: 4em;
    font-weight: 600;
    border-bottom: 1px solid black;
    margin-bottom: 2%;
}

.intake-table {
    display: grid;
    gap: 2.5rem;
    grid-template-columns: 1fr 1fr;
    width: 80%;
    margin: auto;
    font-size: 2em;
}

/* .intake-table-edit-icon {

} */

/* --------------------------- Feeback Summary Styles ----------------------------------*/
.feedback-summary {
    grid-column: span 2;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    height: 80%;
    font-size: 2em;
}

.feedback-summary-day {
    padding: 20% 20% 0 20%;
    height: fit-content;
    text-align: center;
}

.feedback-summary-icon {
    padding: 0 20% 20% 20%;
    text-align: center;
}


/* --------------------------- ProgressChart Styles ----------------------------------*/

.progress-chart {
    grid-row: span 2;
    width: 70%;
    margin: auto;
}

.progress-chart-image {
    width: 100%;
}

/* --------------------------- Goals Styles ----------------------------------*/

.goals {
    /* grid-row-start: 6; */
    height: 100%;
    overflow: hidden;
}

.goals-entry {
    text-align: center;
    margin: 5%;
    font-size: 20px;
}

/* --------------------------- CalSummary Styles ----------------------------------*/

.calorie-summary {
    /* grid-column: span 2; */
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    height: 80%;
    font-size: 2em;
    /* padding: 5%; */
}

.calorie-summary-day {
    padding: 20% 20% 0 20%;
    height: fit-content;
    text-align: center;
}

.calorie-summary-icon {
    padding: 0 20% 20% 20%;
    text-align: center;
}

.check {
    color: green;
}

.xmark {
    color: red;
}

.dash {
    color: grey;
}

/* --------------------------- Notes Styles ----------------------------------*/

.catchup-notes {
    grid-row: span 2;
    grid-column: span 2;
}

.catchup-notes-textbox-container {
    width: 80%;
    /* height: 80%; */
    margin: 5% auto;
}

.catchup-notes-textbox {
    width: 100%;
    height: 150px;
}

/* --------------------------- Schedule Styles ----------------------------------*/

.schedule {
    grid-column: span 4;
    height: 100%;
    overflow: hidden;
}

.schedule-header {
    margin-top: 1%;
    margin-bottom: 1%;
}

.carousel {
    position: relative;
    height: 50%;
    width: 80%;
    margin: 0 auto;
}

.button-left {
    background: transparent;
    border: 0;
    position: absolute;
    top: 50%;
    transform: translateY(-100%);
    cursor: pointer;
    left: -25px;
}

.button-right {
    background: transparent;
    border: 0;
    position: absolute;
    top: 50%;
    transform: translateY(-100%);
    cursor: pointer;
    right: -25px;
}

.track-container {
    /* background: lightgreen; */
    height: 100%;
    position: relative;
    overflow: hidden;
    /* overflow-y: visible; */
}

.track {
    padding: 0;
    margin: 0;
    list-style: none;
    position: relative;
    height: 100%;
    transition: transform 250ms ease-in;
}

.slide {
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    position: absolute;
    top: 0.5%;
    bottom: 0;
    width: 100%;
}

.slide-content {
    height: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}   

.popup {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    background: rgba(0, 0, 0, 0.2);
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hidden {
    display: none;
}

.carousel-nav {
    display: flex;
    justify-content: center;
    padding: 0;
    margin: 0 10px;
}

.carousel-nav-indicator {
    border: 0;
    border-radius: 50%;
    width: 15px;
    height: 15px;
    background: rgba(0, 0, 0, 0.3);
    margin: 0 12px;
    cursor: pointer;
}

.nav-current-slide {
    background: rgba(0, 0, 0, 0.75);
}

/* --------------------------- PersonalBests Styles ----------------------------------*/

.personal-bests {
    /* grid-column: span 2; */
    height: 100%;
    overflow: hidden;
}

/* .personal-bests-content {

} */

.personal-bests-entry {
    margin: 7.5%;
}

.personal-bests-entry-data {
    display: flex;
    margin: 5%;
    justify-content: space-evenly;
}

/* .personal-bests-exercise {

} */

.personal-bests-previous {
    font-weight: 700;
}

.personal-bests-new {
    font-weight: 700;
}

/* --------------------------- Meeting form Styles ----------------------------------*/

.catch-up-meeting-form {
    width: 80%;
    margin: 1% auto;
    text-align: center;
}

.start-meeting-confirmation-popup {
    position: absolute;
    margin: 15%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    /* display: flex;
    flex-direction: column;
    justify-content: center; */
    /* text-align: center; */
    padding: 1%;
}

.start-meeting-confirmation-popup-content {
    display: flex;
    justify-content: space-evenly;
    font-size: 2em;
    width: 80%;
    margin: 2% auto 0;
    gap: 2rem;
}

.start-meeting-confirmation-name {
    font-size: 2em;
}

.start-meeting-confirmation-text {
    width: 30%;
    font-size: 1.75em;
}

.start-meeting-confirmation-name {
    font-weight: 700;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.start-meeting-confirmation-button {
    text-align: center;
}

.confirmation-button {
    font-size: 2em;
}

.submit-meeting-popup {
    position: absolute;
    margin: 15%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    /* display: flex;
    flex-direction: column;
    justify-content: center; */
    align-items: center;
    padding: 1%;
}

.submit-catchup-notes {
    margin: 0 auto;
}

.submit-meeting-confirmation-button {
    display: flex;
    justify-content: center;
    font-size: 2em;
}

.face-thinking {
    color: yellow;
}

.meeting-buttons {
    background-color: white;
    padding: 0.5%;
    transition-duration: 0.4s;
    cursor: pointer;
}

.cancel-submit-buttons-container {
    display: flex;
    justify-content: space-evenly;
    width: 30%;
    margin: auto;
}

.start-meeting-button {
    color: green;
    border: 2px solid green;
}

.start-meeting-button:hover {
    color: white;
    background-color: green;
}

.cancel-meeting-button {
    color: red;
    border: 2px solid red;
}

.cancel-meeting-button:hover {
    color: white;
    background-color: red;
}

.submit-meeting-button {
    color: green;
    border: 2px solid green;

}

.submit-meeting-button:hover {
    color: white;
    background-color: green;
}

.submit-meeting-icons {
    display: flex;
    justify-content: space-evenly;
    width: 50%;
    margin: auto;
    font-size: 4em;
}

